--- a/index.html
+++ b/index.html
@@ -1,5 +1,22 @@
-1. Nick
-3. I'm a Junior in my 2nd semester (Transfer student)
-4. CyberSecurity
-5. I enjoy detailing cars, hockey, video games
-6. I'd like to be able to learn how to create a website without the use of website builders such as Wix.
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>My First Webpage</title>
+	</head>
+	<body>
+		<h1>Welcome to HTML! (h1)</h1>
+		<h2>Test (h2)</h2>
+		<h3>Test(h3)</h3>
+		<br></br>
+		<p>This is my first paragraph. <p>This is my first paragraph. <p>This is my first paragraph. <p>This is my first paragraph. <p></p>
+		<br></br>
+		
+		<p style="color:DodgerBlue">(Dodger)Blue text!</p>
+		<a href="https:\\www.google.com"> Google Link</a>
+		<a href="empty.txt"> Empty Text</a>
+		<!--test comment-->
+		<br></br>
+		<!--<img src="dog.PNG"</img>-->
+		<img src="dog.PNG" alt="[Picture of a Puppy]">
+	</body>
+</html>
