--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<body>
 		<h1>Welcome to HTML! (h1)</h1>
 		<h2>Test (h2)</h2>
-		<h3>Test(h3)</h3>
+		<h3>Test (h3)</h3>
 		<br></br>
-		<p>This is my first paragraph. <p>This is my first paragraph. <p>This is my first paragraph. <p>This is my first paragraph. <p></p>
+		<p>This is my first paragraph.(1) <p>This is my first paragraph.(2) <p>This is my first paragraph.(3) <p>This is my first paragraph.(4)</p>
 		<br></br>
 		
 		<p style="color:DodgerBlue">(Dodger)Blue text!</p>
