Updated file to include lists and table

--- a/index.html
+++ b/index.html
@@ -10,13 +10,42 @@
 		<br></br>
 		<p>This is my first paragraph.(1) <p>This is my first paragraph.(2) <p>This is my first paragraph.(3) <p>This is my first paragraph.(4)</p>
 		<br></br>
-		
+
 		<p style="color:DodgerBlue">(Dodger)Blue text!</p>
 		<a href="https:\\www.google.com"> Google Link</a>
 		<a href="empty.txt"> Empty Text</a>
 		<!--test comment-->
 		<br></br>
 		<!--<img src="dog.PNG"</img>-->
+		
+		<table border=5>
+			<tr>
+				<td>Name</td>
+				<td>Food</td>
+				<td>Dog Breed</td>
+			</tr>
+			<tr>
+				<td>Andrew</td>
+				<td>Spaghetti</td>
+				<td>Schnauser</td>
+			</tr>
+		</table>
+		
+		<ul>
+		<li>Building</li>
+		<li>Potato</li>
+		</ul>
+		
+		<ol>
+		<li>Building</li>
+		<li>Potato</li>
+		</ol>
+		
 		<img src="dog.PNG" alt="[Picture of a Puppy]">
+	
+	
+	
+	
+	
 	</body>
 </html>
