Updated to week5 work

--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>My First Webpage</title>
+		<title>NK Puppy!</title>
+		<link rel="stylesheet" href=week4/week4style.css
 	</head>
+	
 	<body>
 		<h1>Welcome to HTML! (h1)</h1>
 		<h2>Test (h2)</h2>
 		<h3>Test (h3)</h3>
+		<br></br>
+		
+		<p id="para1">This is a blue italic paragraph</p>
+		<p style="color:gray"> This is text that is gray!
 		<br></br>
 		<p>This is my first paragraph.(1) <p>This is my first paragraph.(2) <p>This is my first paragraph.(3) <p>This is my first paragraph.(4)</p>
 		<br></br>
 
 		<p style="color:DodgerBlue">(Dodger)Blue text!</p>
 		<a href="https:\\www.google.com"> Google Link</a>
-		<a href="empty.txt"> Empty Text</a>
+		<a href="../week4/empty.txt"> Empty Text</a>
 		<!--test comment-->
 		<br></br>
 		<!--<img src="dog.PNG"</img>-->
@@ -27,7 +33,7 @@
 			<tr>
 				<td>Andrew</td>
 				<td>Spaghetti</td>
-				<td>Schnauser</td>
+				<td>Schnauzer</td>
 			</tr>
 		</table>
 		
@@ -41,6 +47,7 @@
 		<li>Potato</li>
 		</ol>
 		
-		<img src="dog.PNG" alt="[Picture of a Puppy]">
+		<img src="images/dog.png" alt="[Picture of a Puppy]" width="200" height="200">
+	
 	</body>
 </html>
