--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<li>Potato</li>
 		</ol>
 		
-		<img src="images/dog.png" alt="[Picture of a Puppy]" width="200" height="200">
+		<img src="../images/dog.png" alt="[Picture of a Puppy]" width="200" height="200">
 	
 	</body>
 </html>
