--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 		<p style="color:DodgerBlue">(Dodger)Blue text!</p>
 		<a href="https:\\www.google.com"> Google Link</a>
-		<a href="../week4/empty.txt"> Empty Text</a>
+		<a href="week4/empty.txt"> Empty Text</a>
 		<!--test comment-->
 		<br></br>
 		<!--<img src="dog.PNG"</img>-->
@@ -47,7 +47,7 @@
 		<li>Potato</li>
 		</ol>
 		
-		<img src="../images/dog.png" alt="[Picture of a Puppy]" width="200" height="200">
+		<img src="images/dog.png" alt="[Picture of a Puppy]" width="200" height="200">
 	
 	</body>
 </html>
