--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 		<br></br>
 
 		<p style="color:DodgerBlue">(Dodger)Blue text!</p>
-		<a href="https:\\www.google.com"> Google Link</a>
-		<a href="cybr201nkleinknecht.github.io/week4/empty.txt"> Empty Text</a>
+		<a href="https:\\www.google.com"> Google Link (absolute link)</a>
+		<a href="week4/empty.txt"> Empty Text (relative link)</a>
 		<!--test comment-->
 		<br></br>
 		<!--<img src="dog.PNG"</img>-->
@@ -47,7 +47,7 @@
 		<li>Potato</li>
 		</ol>
 		
-		<img src="https://www.cybr201nkleinknecht.github.io/images/dog.png" alt="[Picture of a Puppy]" width="200" height="200">
+		<img src="images/dog.PNG" alt="[Picture of a Puppy]" width="200" height="200">
 	
 	</body>
 </html>
