--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
 		<h3>Test (h3)</h3>
 		<br></br>
 		
+		<nav class="webnav">
+				Website Links (weeks)
+				<ul class="web-links">
+					<li><a href="https://profjoneshowe.com/cybr201nkleinknecht.github.io/index2.html"> Week 6 </a></li>
+					<li><a href="https://profjoneshowe.com/cybr201nkleinknecht.github.io/index3.html"> Week 7 </a></li>
+					<li><a href=""> placeholder </a></li>
+					<li><a href=""> placeholder </a></li>
+				</ul>
+			</nav>
+		<br></br>
+		
 		<p id="para1">This is a blue italic paragraph</p>
 		<p style="color:gray"> This is text that is gray!
 		<br></br>
@@ -18,8 +29,8 @@
 		<br></br>
 
 		<p style="color:DodgerBlue">(Dodger)Blue text!</p>
-		<a href="https:\\www.google.com"> Google Link (absolute link)</a>
-		<a href="week4/empty.txt"> Empty Text (relative link)</a>
+		<a href="https:\\www.google.com"> Google Link</a>
+		<a href="../week4/empty.txt"> Empty Text</a>
 		<!--test comment-->
 		<br></br>
 		<!--<img src="dog.PNG"</img>-->
@@ -47,7 +58,7 @@
 		<li>Potato</li>
 		</ol>
 		
-		<img src="images/dog.PNG" alt="[Picture of a Puppy]" width="200" height="200">
+		<img src="images/dog.png" alt="[Picture of a Puppy]" width="200" height="200">
 	
 	</body>
 </html>
